x overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,10 @@ padding-left:10px
     }
 
 
+    @media screen  and (max-width:414px){
+
+        .home{
+
+            height:100vh
+        }
+    }
