--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   font-size: 16px;
   /*line-height: 24px;*/
   font-weight: 400;
-overflow:clip;
+
 
   /*font-synthesis: none;
   text-rendering: optimizeLegibility;
